--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ certifi==2025.1.31
 charset-normalizer==3.4.1
 click==8.1.8
 Flask==3.1.0
+gunicorn==23.0.0
 h11==0.16.0
 idna==3.10
 itsdangerous==2.2.0
@@ -12,6 +13,7 @@ Jinja2==3.1.6
 MarkupSafe==3.0.2
 optional-django==0.3.0
 outcome==1.3.0.post0
+packaging==25.0
 PySocks==1.7.1
 react==4.3.0
 requests==2.32.3
